# kalico

./: .claudeignore  .config.f446.bak  .config.f446.last  .config.h7.bak  .config.h7.last  .config.h7.silicon.bak  .config.linux  .config.pre-sim-build.bak  .config.pre-sim-build.bak2  .config.pre-sim-build.bak3  .dockerignore  .flake8  .gitignore  .python-version  404.html  API_Server.html  Axis_Twist_Compensation.html  BLTouch.html  Beaglebone.html  Bed_Level.html  Bed_Mesh.html  Benchmarks.html  Bleeding_Edge.html  Bootloader_Entry.html  Bootloaders.html  CANBUS.html  CANBUS_Troubleshooting.html  CANBUS_protocol.html  CLAUDE.md  CONTRIBUTING.html  Code_Overview.html  Command_Templates.html  Config_Changes.html  Config_Reference.html  Config_Reference_Bleeding_Edge.html  Config_checks.html  Contact.html  Debugging.html  Delta_Calibrate.html  Dockable_Probe.html  (+49 more)
docs/: API_Server.md  Axis_Twist_Compensation.md  BLTouch.md  Bed_Level.md  Bed_Mesh.md  Benchmarks.md  Bleeding_Edge.md  Bootloaders.md  CANBUS.md  CONTRIBUTING.md  Code_Overview.md  Command_Templates.md  Config_Changes.md  Config_Reference.md  Config_Reference_Bleeding_Edge.md  Config_checks.md  Danger_Features.md  Debugging.md  Delta_Calibrate.md  Example_Configs.md  FAQ.md  Features.md  G-Codes.md  INDX.md  Jerk_Limiting.md  Kalico_Additions.md  Load_Cell.md  MPC.md  Manual_Level.md  Measuring_Resonances.md  Multi_MCU_Homing.md  Nonlinear_Pressure_Advance.md  Overview.md  Packaging.md  Probe_Calibrate.md  Python_API.md  README  RPi_microcontroller.md  Releases.md  Resonance_Compensation.md  (+9 more)
docs/_kalico/: mkdocs.yml
docs/kalico-rewrite/: beacon-fork-survey.md  ci.md  dependency-graph.md  ethercat-bench-bringup.md  external-probe-homing.md  external-trigger-homing.md  hardware.md  mcu-c-rust-boundary.md  motion-node-unification.md  sample-rate-kconfig.md  servo-feedforward.md  servo-telemetry-capture.md  usb-halt-facts.md  virtual-endstops-and-probe.md
docs/kalico-rewrite/observability/: README-local-testrig.md
docs/research/: bspline-polynomial-convolution.md  condensed-smooth-chain-socp-junction.md  firmware-survey.md  h723-f64-fpu-capability.md  jerk-constrained-socp-relaxation-tightness.md  junction-deviation-cornering-formula.md  layer3-time-polynomial-fit-bounds.md  linear-us-approximation-cubic-bezier-error.md  maxiterslp-grid-sensitivity-fixture-6.md  open-loop-phase-stepping-prior-art.md  pi5-socp-throughput-investigation.md  rest-reachability-envelope-jerk-tightening.md  sensorless-homing-bench-debug-2026-06-10.md  serialport-disconnect-detection.md  single-polynomial-fit-per-segment-conditioning.md  stall-homing-move.md  step13-boundary-tangent-analysis.md  step5-h723-cycle-budget.md  step6-buffer-budget-measurements.md  tmc5160-open-loop-phase-stepping.md
docs/src/: Config_Reference.md  Example_Configs.md
docs/superpowers/: plan-changes-log.md
docs/superpowers/audits/: 2026-05-19-mcu-boundary-audit-findings.md
docs/superpowers/handoff/: 2026-05-04-bridge-mode-phase4-handoff.md  2026-05-05-phase4-gate-green-handoff.md  2026-05-06-runtime-tick-rename-catalog.md
docs/superpowers/notes/: 2026-05-02-step-7d-phase-2a-session.md  2026-05-11-first-motion-no-movement-investigation.md
docs/superpowers/plans/: 2026-04-26-layer-1-fitter-prototype.md  2026-04-26-layer-1-phase-1-foundations.md  2026-04-26-nurbs-algebra-implementation.md  2026-04-26-nurbs-layer-0-implementation.md  2026-04-27-kalico-verifier.md  2026-04-27-layer-1-g5-reduction.md  2026-04-27-layer-2-multi-segment.md  2026-04-27-layer-2-topp-prototype.md  2026-04-28-layer-4-mcu-framework-stub.md  2026-04-28-step6-comm-protocol-and-sim-fixes.md  2026-04-29-step7-pre-cubic-pipeline-prep.md  2026-04-30-step-7c-io.md  2026-04-30-step13-compat-layer.md  2026-04-30-step7a-layer3-trajectory-shaping.md  2026-04-30-step7b-layer4-mcu-evaluator.md  2026-05-01-step-7c-bridge-phase-1.md  2026-05-01-step-7c-bridge-phase-2.md  2026-05-01-step-7c-io-tail.md  2026-05-02-step-7d-hardware-bringup.md  2026-05-02-step-7d-phase-2b.md  2026-05-04-bridge-mode-path-a-completion.md  2026-05-05-mvp-global-scalar-jerk.md  2026-05-05-stencil-unification.md  2026-05-06-kalico-demux-rx-wiring.md  2026-05-06-runtime-sizing-per-mcu.md  2026-05-06-runtime-tick-portability.md  2026-05-06-serial-frame-io-refactor.md  2026-05-07-motion-toolhead-extends-upstream.md  2026-05-08-faithful-klippy-sim.md  2026-05-08-syscall-shim.md  2026-05-12-phase-stepping-math-kernel.md  2026-05-12-step-time-scheduling.md  2026-05-13-klippy-log-reader-skill.md  2026-05-14-step-emission-architecture.md  2026-05-18-bridge-true-phase-stepping.md  2026-05-18-phase-stepping-sim.md  2026-05-19-mcu-c-rust-boundary-refactor.md  2026-05-19-stepping-redesign-implementation.md  2026-05-20-stepping-redesign-bench-bringup.md  2026-05-20-stepping-redesign-finish-implementation.md  (+44 more)
docs/superpowers/specs/: 2026-04-26-layer-1-fitter-prototype-design.md  2026-04-26-layer-1-rust-architecture-design.md  2026-04-26-nurbs-algebra-design.md  2026-04-26-nurbs-evaluation-library-design.md  2026-04-26-nurbs-multiplication-morken-correctness.md  2026-04-27-kalico-verifier-design.md  2026-04-27-layer-1-g5-reduction-design.md  2026-04-27-layer-2-multi-segment-design.md  2026-04-27-layer-2-topp-prototype-design.md  (+72 more)
firmware/buzz-h7/: Cargo.toml  README.md  memory.x
rust/: .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml  rust_out
rust/.cargo/: config.toml
rust/.config/: nextest.toml
rust/compat/: Cargo.toml
rust/compat/src/: arc.rs  (+12 more)
rust/gcode/: Cargo.toml  README.md
rust/geometry/: Cargo.toml  README.md
rust/kalico-c-api/: Cargo.toml  cbindgen-runtime.toml  cbindgen.toml
rust/kalico-ethercat-rt/: Cargo.toml  build.rs
rust/kalico-host-rt/: Cargo.toml
rust/kalico-native-transport/: Cargo.toml
rust/kalico-protocol/: Cargo.toml  build.rs  schema_def.rs
rust/motion-bridge/: Cargo.toml
rust/nurbs/: Cargo.toml
rust/nurbs-c-api/: Cargo.toml  cbindgen.toml
rust/runtime/: Cargo.toml  build.rs
rust/servo-ident/: Cargo.toml
rust/temporal/: Cargo.toml
rust/trajectory/: Cargo.toml
(+1547 files in other folders)
