[workspace]
members = [
    "nurbs",
    "kalico-c-api",
    "gcode",
    "geometry",
    "temporal",
    "runtime",
    "kalico-host-rt",
    "compat",
]
exclude = ["gcode/fuzz"]
resolver = "2"

[workspace.package]
# Permissive license per the deny.toml rationale: the kalico Rust crates ship
# under MIT/Apache-2.0 so they can be linked into Klipper (GPL-3.0) at the
# staticlib boundary without leaking copyleft into the Rust crate API.
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Shared deps versioned here from day one.
thiserror = "2"
clarabel = "0.11"  # Pinned to current minor at implementation time (0.11.1). Task 5.
heapless = { version = "0.8", default-features = false }

# Workspace-wide lint configuration. Crates opt in via `[lints] workspace = true`.
# Pedantic-tier lints are enabled at warn (with `-D warnings` they fail CI).
# A handful of categories are explicitly allowed because they fire pervasively
# on patterns that are correct for this codebase: stub functions awaiting Layer 1+
# integration (missing-docs nags), FFI/wire-format pointer casts (cast nags),
# numerical-array index loops in eval/de Boor (needless-range-loop), and
# NaN-rejecting `!(x > y)` validation (neg_cmp_op_on_partial_ord).
[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
similar_names = "allow"
# Allowed pervasively (see workspace-lints rationale above):
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_ptr_alignment = "allow"
needless_range_loop = "allow"
neg_cmp_op_on_partial_ord = "allow"
many_single_char_names = "allow"
type_complexity = "allow"

[profile.release]
# opt-level = 3 for host builds (Pi 5: SOCP solve on cubic@N=200 ~25% slower
# under "z" per the Pi 5 throughput investigation:
# docs/research/pi5-socp-throughput-investigation.md). Future MCU firmware
# build (build-order steps 5+, not yet wired up) should override via a
# `[profile.release-mcu]` or per-package profile when it lands; size matters
# on the H723/F4x targets.
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true
overflow-checks = false

[profile.dev]
opt-level = 1            # eval correctness tests run faster than -O0; still debuggable
debug = true
