[package]
name = "kalico-c-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
description = "Umbrella staticlib + cbindgen FFI surface for kalico's Rust crates (nurbs Layer 0; runtime Layer 4)."

[lib]
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "gen-headers"
path = "src/bin/gen_headers.rs"
required-features = ["host"]

[features]
default = ["host"]
mcu-h7 = ["nurbs/mcu-h7"]
mcu-f4 = ["nurbs/mcu-f4"]
host = ["nurbs/host", "dep:cbindgen"]

[dependencies]
nurbs = { path = "../nurbs", default-features = false }
cbindgen = { version = "0.29", optional = true, package = "cbindgen" }

[lints]
workspace = true
