[package]
name = "kalico-c-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
description = "Umbrella staticlib + cbindgen FFI surface for kalico's Rust crates (nurbs Layer 0; runtime Layer 4)."
license.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "gen-headers"
path = "src/bin/gen_headers.rs"
required-features = ["host"]

[features]
default = ["host", "header-nurbs", "header-runtime"]
mcu-h7 = ["nurbs/mcu-h7", "runtime/mcu-h7"]
mcu-f4 = ["nurbs/mcu-f4", "runtime/mcu-f4"]
mcu-g0 = ["nurbs/mcu-g0", "runtime/mcu-g0"]
host = ["nurbs/host", "runtime/host", "dep:cbindgen"]
header-nurbs = []
header-runtime = []
# Pass-through to runtime/kalico-sim. See runtime/Cargo.toml for the
# rationale and the production-firmware safety boundary.
kalico-sim = ["runtime/kalico-sim"]

[dependencies]
nurbs = { path = "../nurbs", default-features = false }
runtime = { path = "../runtime", default-features = false }
cbindgen = { version = "0.29", optional = true, package = "cbindgen" }
# Required for RMW atomic operations on MCU targets: on thumbv7em lowers to
# native LDREX/STREX; on thumbv6m (STM32G0) uses interrupt-masking fallback.
# Version and features match runtime's dependency so cargo deduplicates.
portable-atomic = { version = "1", default-features = false, features = ["fallback"] }

[lints]
workspace = true
