[package]
name = "motion-bridge"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
description = "PyO3 bridge between klippy (Python) and the Rust motion stack."
license.workspace = true

[lib]
# Must match the #[pymodule] fn name in src/lib.rs. We use _native to
# avoid shadowing klippy/motion_bridge.py — see the comment there.
name = "motion_bridge_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }
kalico-host-rt = { path = "../kalico-host-rt", features = ["python-bridge"] }
kalico-protocol = { path = "../kalico-protocol" }
trajectory = { path = "../trajectory" }
temporal = { path = "../temporal" }
geometry = { path = "../geometry" }
gcode = { path = "../gcode" }
compat = { path = "../compat" }
nurbs = { path = "../nurbs", features = ["host"] }
runtime = { path = "../runtime" }
crossbeam-channel = "0.5"
libc = "0.2"
log = "0.4"
arc-swap = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "env-filter", "std", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"
time = { version = "0.3", default-features = false, features = ["formatting", "macros", "std"] }
serde_json = "1"
thiserror = { workspace = true }

[features]
test-support = []

[dev-dependencies]
rustfft = "6"
heapless = { workspace = true }
kalico-native-transport = { path = "../kalico-native-transport" }
kalico-host-rt = { path = "../kalico-host-rt", features = ["test-harness"] }
motion-bridge = { path = ".", features = ["test-support"] }

[[test]]
name = "relay_reactor_integration"
required-features = []

[lints]
workspace = true
