[package]
name = "nurbs-c-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Stable C ABI surface for the nurbs crate"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = ["mcu-h7"]
mcu-h7 = ["nurbs/mcu-h7"]
mcu-f4 = ["nurbs/mcu-f4"]
host = ["nurbs/host"]

[dependencies]
nurbs = { path = "../nurbs", default-features = false }

[build-dependencies]
cbindgen = "0.27"
