[package]
name = "nurbs-c-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Stable C ABI surface for the nurbs crate"

[lib]
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "gen-headers"
path = "src/bin/gen_headers.rs"
required-features = ["host"]

[features]
default = ["host"]
mcu-h7 = ["nurbs/mcu-h7"]
mcu-f4 = ["nurbs/mcu-f4"]
host = ["nurbs/host", "dep:cbindgen"]

[dependencies]
nurbs = { path = "../nurbs", default-features = false }
cbindgen = { version = "0.27", optional = true }

[lints]
workspace = true
