[package]
name = "nurbs"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Layer 0 NURBS substrate: eval, arc-length, algebra"

[dependencies]
libm = { version = "0.2", optional = true }

[features]
default = ["host"]
f64 = []
host = ["f64"]
mcu-h7 = ["dep:libm"]
mcu-f4 = ["dep:libm"]

[dev-dependencies]
proptest = "1.5"

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
all = "warn"
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
similar_names = "allow"
