[package]
name = "nurbs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
description = "Layer 0 NURBS substrate: eval, arc-length, algebra"
license.workspace = true

[dependencies]
libm = { version = "0.2", optional = true }

[features]
default = ["host"]
f64 = []
host = ["f64"]
mcu-h7 = ["dep:libm"]
mcu-f4 = ["dep:libm"]

[dev-dependencies]
proptest = "1.5"
serde_json = "1.0"

[lints]
workspace = true
