[package]
name = "runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
description = "Layer 4 MCU runtime — 40 kHz ISR with stub NURBS evaluator. Step 5."
license.workspace = true

[dependencies]
nurbs = { path = "../nurbs", default-features = false }
heapless = { workspace = true }

[dev-dependencies]
proptest = "1.5"
static_assertions = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Loom is gated on `cfg(loom)` so it never enters the regular dev/test
# graph. Run loom tests with:
#   RUSTFLAGS="--cfg loom" cargo test -p runtime --release \
#     --test loom_seqlock --test loom_spsc_split
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[features]
default = ["host"]
host = ["nurbs/host"]
mcu-h7 = ["nurbs/mcu-h7"]
mcu-f4 = ["nurbs/mcu-f4"]
# Phase 12.2: gates the `Engine::inject_iter_count` test-only injection
# so integration tests can reach the otherwise-defense-in-depth
# `MAX_BOUNDARY_ITERS` fault path. NOT in default. Consumers (kalico-c-api,
# host-rt) take `default-features = false`, so production firmware never
# carries the field. Tests opt in via `--features test-injection` (or the
# `[features]` test-default below in this Cargo.toml — keep them aligned).
# Sim-only escape hatch (Step-6 plan Phase 0 Task 0.2). Enables the
# `sim_fixtures` module of pre-baked NURBS curves used by the
# `kalico_runtime_load_fixture` FFI. Gated on CONFIG_KALICO_SIM=y in the
# Klipper build via src/Makefile threading. NEVER include in production
# firmware — Renode's H7 .repl ignores the SCB->CPACR write in SystemInit,
# so any FPU instruction (including the curve-validation float compares
# in CurvePool::load) raises a UsageFault that lands in DefaultHandler;
# the fixture path bypasses validation by using pre-validated static data.
kalico-sim = []
loom = []  # gates loom-tests under cfg(loom)
# Phase 12.2: test-only injection point for `MAX_BOUNDARY_ITERS` so the
# integration test can reach the otherwise-defense-in-depth fault path
# without overstuffing the queue (which the public producer API rejects).
# Enabled by `cargo test` automatically via `[features]` default... no:
# we enable it from individual integration tests via `--features
# test-injection` rather than wiring it into the default set, because we
# don't want production builds to carry the injection field.
test-injection = []

[lints]
workspace = true
