[package]
name = "runtime"
version = "0.1.0"
edition = "2024"
build = "build.rs"
rust-version = "1.85"
publish = false
description = "Layer 4 MCU runtime — 40 kHz ISR with stub NURBS evaluator. Step 5."
license.workspace = true

[dependencies]
nurbs = { path = "../nurbs", default-features = false }
heapless = { workspace = true }
# `portable-atomic` provides software 64-bit atomics on targets that lack
# native u64 CAS (thumbv7em-none-eabi[hf]: Cortex-M7 only has 32-bit
# LDREX/STREX). The `fallback` feature is on by default; we make it
# explicit so future changes do not silently disable the software impl.
portable-atomic = { version = "1", default-features = false, features = ["fallback"] }
# Software floating-point fallbacks for `no_std` MCU builds where `f64::sqrt`
# / `f64::cbrt` (which live on the inherent impl in `std`) are unavailable.
# Already in the dep tree transitively via `nurbs` MCU features; declaring it
# here so the runtime crate can use it unconditionally regardless of which
# `nurbs` feature is active.
libm = { version = "0.2", default-features = false }

[dev-dependencies]
proptest = "1.5"
static_assertions = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Loom is gated on `cfg(loom)` so it never enters the regular dev/test
# graph. Run loom tests with:
#   RUSTFLAGS="--cfg loom" cargo test -p runtime --release \
#     --test loom_seqlock --test loom_spsc_split
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[features]
default = ["host"]
host = ["nurbs/host"]
mcu-h7 = ["nurbs/mcu-h7"]
mcu-f4 = ["nurbs/mcu-f4"]
# Sim-only escape hatch (Step-6 plan Phase 0 Task 0.2). Enables the
# `sim_fixtures` module of pre-baked NURBS curves used by the
# `kalico_runtime_load_fixture` FFI. Gated on CONFIG_KALICO_SIM=y in the
# Klipper build via src/Makefile threading. NEVER include in production
# firmware — Renode's H7 .repl ignores the SCB->CPACR write in SystemInit,
# so any FPU instruction (including the curve-validation float compares
# in CurvePool::load) raises a UsageFault that lands in DefaultHandler;
# the fixture path bypasses validation by using pre-validated static data.
kalico-sim = []
loom = []  # gates loom-tests under cfg(loom)

[lints]
workspace = true
