[package]
name = "runtime"
version = "0.1.0"
edition = "2024"
build = "build.rs"
rust-version = "1.85"
publish = false
description = "Layer 4 MCU runtime — 40 kHz ISR with stub NURBS evaluator. Step 5."
license.workspace = true

[dependencies]
nurbs = { path = "../nurbs", default-features = false }
heapless = { workspace = true }
# `portable-atomic` provides software 64-bit atomics on targets that lack
# native u64 CAS (thumbv7em-none-eabi[hf]: Cortex-M7 only has 32-bit
# LDREX/STREX). The `fallback` feature is on by default; we make it
# explicit so future changes do not silently disable the software impl.
portable-atomic = { version = "1", default-features = false, features = ["fallback"] }
# Software floating-point fallbacks for `no_std` MCU builds where `f64::sqrt`
# / `f64::cbrt` (which live on the inherent impl in `std`) are unavailable.
# Already in the dep tree transitively via `nurbs` MCU features; declaring it
# here so the runtime crate can use it unconditionally regardless of which
# `nurbs` feature is active.
libm = { version = "0.2", default-features = false }

[dev-dependencies]
proptest = "1.5"
static_assertions = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Loom is gated on `cfg(loom)` so it never enters the regular dev/test
# graph. Run loom tests with:
#   RUSTFLAGS="--cfg loom" cargo test -p runtime --release \
#     --test loom_seqlock --test loom_force_idle
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[features]
default = ["host", "motion-module-stepper"]
host = ["nurbs/host"]
mcu-h7 = ["nurbs/mcu-h7"]
mcu-f4 = ["nurbs/mcu-f4"]
mcu-g0 = ["nurbs/mcu-g0"]
# Marker feature for real Linux-MCU firmware builds (MACH_LINUX without
# CONFIG_KALICO_SIM).  Implies `host` (f64 numeric profile) and additionally
# signals that the build links the C step/SPI symbols from
# src/linux/phase_stepping_spi.c.  Set only by the MACH_LINUX Makefile path,
# never by the host planner lib or unit tests.  Parallel to mcu-h7/f4/g0 which
# imply bare-metal numeric profiles.
mcu-linux = ["host"]
# Stepper pulse/phase dispatch backend.  Enabled by default so host builds and
# tests carry the full dispatch.  MCU builds enable it explicitly via the
# Makefile/Kconfig wiring.  Servo / EtherCAT nodes omit it to get a
# position-tracking-only runtime with no dispatch object code.
motion-module-stepper = []
# Sim build marker (CONFIG_KALICO_SIM=y via src/Makefile). Keeps MCU-style
# tick paths active in sim firmware (see tick.rs cfg gates). Never in
# production firmware.
kalico-sim = []
loom = []  # gates loom-tests under cfg(loom)

[lints]
workspace = true
